--- a/EnlightenMe/app/src/main/res/layout/activity_blue_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_blue_buttons.xml
@@ -39,7 +39,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="15dp"
         android:backgroundTint="#90E0EF"
-        android:text="Symtoms"
+        android:text="Symptoms"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
